--- a/index.html
+++ b/index.html
@@ -22,11 +22,10 @@
     </div>
     <div class="greetings">
         <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
-            <span> D </span>
-            <span> I </span>  
-            <span> N </span>
-            <span> D </span>
             <span> A </span>
+            <span> L </span>  
+            <span> E </span>
+            <span> X </span>
         </div>
     <!-- <div class="description">
         <span>Aku ada hadiah spesial buat kamu!!</span>
